Closed Bug 48504 Opened 25 years ago Closed 24 years ago

User-Agent on Windows Me is incorrect

Categories

(Core :: Networking, defect, P3)

x86
Windows ME
defect

Tracking

()

VERIFIED FIXED
Future

People

(Reporter: frank, Assigned: dveditz)

References

Details

(Keywords: helpwanted, Whiteboard: [nsbeta3+])

Attachments

(1 file)

I recently downloaded a copy of the final version of Windows Me from MSDN and checked out what various browsers send for their User-Agents. Here are the results: IE 5.5 : "Mozilla/4.0 (compatible; MSIE 5.5; Windows 98; Win 9x 4.90)" NS 4.74: "Mozilla/4.74 [en] (Win95; U)" Moz M17: "Mozilla/5.0 (Windows; U; Win98; en-US; m17) Gecko/20000807" Moz M18: "Mozilla/5.0 (Windows; U; Win98; en-US; m18) Gecko/20000810" Mozilla/Netscape should probably use the same platform info that IE is already using, as was done with bug #31001.
Confirming to get this onto the radar, but we could probably live with this for 6.0 Reassigning to ekrock for a marketing guy opinion about how important this is.
Assignee: gagan → ekrock
Status: UNCONFIRMED → NEW
Ever confirmed: true
Is there any other way that a JavaScript script could detect that it was running on WinME if we don't fix this? Agree we should shoot for compatibility with MS IE UAs on WinME if possible. In this case I guess that would mean changing "Win98" to "Win9x" in the UA string? Someone please propose exactly what they think our UA string should be on WinME. Doing this would (a) enable those who wished to distinguish WinME from Win98, but (b) not break compatibility with scripts that detect Win32 by looking for "win" (case-insensitive). cc:ing dbaron who's been investigating UA issues and frank@sane.com who writes logging software. This should be a trivally easy fix once we define for certain what we'd like the UA string to show. Marking helpwanted; would love it if net community member would take this on. cc:ing JerryBaker@weirdness.com who helped on bug 31001. For now, marking Future. If we have to, we could live with being unable to distinguish between WinME and Win98 for the first release as a known bug. Developers should be aware that we will fix this however in a future release so they shouldn't depend upon this behavior!
Keywords: helpwanted
Target Milestone: --- → Future
Reassigning back to dveditz so it stays on engineering's bug list radar (and maybe gets picked up by a mozilla community member) instead of dropping into a marketing bug list black hole.
Assignee: ekrock → dveditz
To be 100% compatible with Microsoft I would propose a UA of: Mozilla/5.0 (Windows; U; Windows 98; Win 9x 4.90; en-US; m18) Gecko/20000811 However, I personally don't like that it adds an extra field to the UA. I believe the important part is "Win 9x 4.90", so I propose a UA of: Mozilla/5.0 (Windows; U; Win 9x 4.90; en-US; m18) Gecko/20000811 We have updated the development release of our log analysis product to scan for "Win 9x 4.90", so it would work with our software either way.
I would be fine with using Win 9x 4.90 to represent Windows Me. dbaron, does that work with your UA proposal?
The UA proposal says "etc." to accomodate future OSes. This seems like an awfully strange thing to do, but I won't object...
I agree with dbaron, it's bletcherous. But a=brendan@mozilla.org -- who will help with the cvs commit? /be
argh... this is a known dup of one of jud's (?) bugs. I can't seem to find that right now.
I can handle the commit
Keywords: nsbeta3
Keywords: patch
Whiteboard: [nsbeta3+]
fix checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified: User-Agents for win ME,Win NT, and win 98 User-Agent: Mozilla/5.0 (Windows; U; Win 9x 4.90; en-US; m18) Gecko/20000926 Netscape6/6.0b3 User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; m18) Gecko/20000926 Netscape6/6.0b3 User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; m18) Gecko/20000920 Netscape6/6.0b3
Status: RESOLVED → VERIFIED
Mass removing self from CC list.
Now I feel sumb because I have to add back. Sorry for the spam.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: