Bug 48504 correct user-agent for Windows ME. patch from Frank Faubert <frank@sane.com> a=brendan, r=brendan,dveditz